# android-cmake

./: .gitattributes  .gitignore  .hgignore  AndroidNdkGdb.cmake  README  README.md  README.txt  android.toolchain.cmake  documentation.html  ndk_links.md
cmake-modules/: find_eigen3.cmake
cmake_modules/Platform/: Android.platform
common-libs/: .gitignore  build.sh
common-libs/boost/: .gitignore  .hgignore  BoostConfig.cmake.in  CMakeLists.txt  README.txt  android.patch  endian.patch  get_boost.sh  patch.filesystem.sh  patch_boost.sh
common-libs/boost/sys/: statvfs.h
common-libs/eigen/: .gitignore  get_eigen.sh
common-libs/glues/: CMakeLists.txt
common-libs/glues/include/glues/: glues.h  glues_error.h  glues_mipmap.h  glues_project.h  glues_quad.h  glues_registry.h
common-libs/glues/src/: glues_error.c  glues_mipmap.c  glues_project.c  glues_quad.c  glues_registry.c
docs/: INSTALL.html  OVERVIEW.html  boost.html  hello-android-cmake.html  hello-cmake.html  hello-gl2.html  sidenav.html
samples/hello-android-cmake/: .hgignore  AndroidManifest.xml  project_create.sh
samples/hello-android-cmake/res/layout/: main.xml
samples/hello-android-cmake/res/values/: strings.xml
samples/hello-android-cmake/src/com/theveganrobot/cmake/: HelloAndroidCMake.java
samples/hello-boost/: CMakeLists.txt  HelloBoost.h  hello-boost.cpp  run_java.sh
samples/hello-boost/java/: build.xml  javah.sh
samples/hello-boost/java/src/com/theveganrobot/cmake/: HelloBoost.java
samples/hello-cmake/: CMakeLists.txt  HelloWorld.h  HelloWorld.java  README.txt  build_java.sh  hello-cmake.c  hello-cmake.cpp  run_java.sh
samples/hello-cmake/java/: build.xml  javah.sh
samples/hello-cmake/java/src/com/theveganrobot/cmake/: HelloWorld.java
samples/hello-eigen/: CMakeLists.txt  HelloEigen.h  hello-eigen.cpp  run_java.sh
samples/hello-eigen/android/hello-android-eigen/: AndroidManifest.xml  project_create.sh
samples/hello-eigen/android/hello-android-eigen/res/values/: strings.xml
samples/hello-eigen/android/hello-android-eigen/src/com/theveganrobot/cmake/: HelloEigen.java
samples/hello-eigen/android/hello-android-eigen/src/com/theveganrobot/cmake/eigen/: HelloAndroidEigen.java
samples/hello-eigen/cmake/: find_eigen3.cmake
samples/hello-eigen/java/: build.xml  javah.sh
samples/hello-eigen/java/src/com/theveganrobot/cmake/: HelloEigen.java
samples/hello-gl2/: CMakeLists.txt  README  project_create.sh
samples/hello-gl2/jni/: CMakeLists.txt
scripts/: get_ndk_linux.sh  get_ndk_toolchain_linux.sh
toolchain/: android.crystax.toolchain.cmake  android.toolchain.cmake
